@@ -126,7 +126,8 @@ static opcode_desc opcode_table[] =
 	{ NULL, 0, 0 },	{ NULL, 0, 0 },			// 4e - 4f
 	{ "push\tstatic", 2, VARREF },			// 50
 	{ "pop\tstatic", 2, VARREF },			// 51
-	{ NULL, 0, 0 },	{ NULL, 0, 0 },			// 52-53
+	{ "callo",2,IMMED },				// 52
+	{ NULL, 0, 0 },					// 53
 	{ NULL, 0, 0 },	{ NULL, 0, 0 },	{ NULL, 0, 0 },	{ NULL, 0, 0 },	// 54-57
 	{ NULL, 0, 0 },	{ NULL, 0, 0 },	{ NULL, 0, 0 },	{ NULL, 0, 0 },	// 58-5B
 	{ NULL, 0, 0 },	{ NULL, 0, 0 },	{ NULL, 0, 0 },	{ NULL, 0, 0 },	// 5C-5F
